# BibleBooksCodes

./: .gitignore  README.md
.github/workflows/: validate-xml.yml
JavaScript/: BibleBooksCodes.js  BibleBooksCodes_Tables.js  package.json  postscript.js  prelude.js  test.js
Python/: BibleBooksCodes.py  BibleBooksCodesConverter.py  BibleOrgSysGlobals.py  singleton.py
Rust/: Cargo.toml  README.md
Rust/bos_books_codes/: BibleBooksCodes_Tables.tsv  Cargo.toml  README.md  build.rs  build_static_tables.py  lib.src.rs  results_summary.txt
Rust/bos_books_codes/benches/: README.txt  my_benchmark.rs
Rust/bos_books_codes/src/: lib.rs
Rust/bos_books_codes_py/: Cargo.toml  README.txt  benchmark.py  pyproject.toml
Rust/bos_books_codes_py/src/: lib.rs
Rust/src/: lib.rs
derivedFormats/: BibleBooksCodes.rng  BibleBooksCodes_Tables.json  BibleBooksCodes_Tables.pickle
sourceXML/: BibleBooksCodes.rnc  BibleBooksCodes.xml
