#cargo-features = ["edition2021"]

[package]
name = "bos_books_codes"
version = "0.1.0"
authors = ["Robert <Freely.Given.org+BOS@gmail.com>"]
license = "MIT OR Apache-2.0"
description = """
A library that handles 3-character Bible Books Codes.
"""
readme = "README.md"
homepage = "https://github.com/you/bible_org_sys"
repository = "https://github.com/you/bible_org_sys"
keywords = ["cli", "bible", "usfm"]
categories = ["command-line-utilities", "text-processing"]

edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#path = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
