[package]
name = "bos_books_codes"
version = "0.1.0"
authors = ["Robert <Freely.Given.org+BosBC@gmail.com>"]
license = "MIT OR Apache-2.0"
description = """
A library that handles 3-character Bible Books Codes.
"""
readme = "README.md"
homepage = "https://github.com/Freely-Given-org/BibleBooksCodes"
repository = "https://github.com/Freely-Given-org/BibleBooksCodes"
keywords = ["bible", "books", "codes", "USFM", "OSIS"]
categories = ["command-line-utilities", "text-processing"]

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#path = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#lazy_static = "1.4.0"
